--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -12,7 +12,7 @@
 
 <h1>Login!</h1>
 
-<form method = "POST" action="{% url 'login' %}">
+<form method = "POST" action="{% url 'signin' %}">
     {% csrf_token %}
     username:
     <br/>
@@ -22,12 +22,10 @@
     <br/>
     <input type="password" name="password" />
     <br/>
-    <input class ="btn btn-primary" type="submit" value= "Login" />
+    <input class ="btn btn-primary" type="submit" value= "login" />
+    <input type="hidden" name="next" value="{{ next }}"/>
     <br/>
-
-
-
 </form>
-
+<button><a href="{% url 'signup' %}">Don't have an account register? </button>
 
 {% endblock %}
